2012-02-29 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/javascript/pandora_modules.js: "snmpwalk" button is 
	disabled after click on that button to avoid duplicate requests.
	
	Merged bugfix from trunk.

2012-02-28 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_reporting.php: Added set_time_limit to 500 secs
	to avoid php timeouts in projection and prediction reports.
	
	Merged bugfix from trunk.

2012-02-28 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/agentes/estado_ultimopaquete.php: Fixed bug in this view
	When a module is in a unknown status shows "NeverUnknown" instead of 
	"Unknow".
	
	Bugfix merged from trunk.

2012-02-27  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_events.php: Merged from trunk. Fixed an include
	  path.

2012-02-27 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php: Added avg_only option to boolean 
	graphs, string graphs have more space between elements in legend,
	added units to all graphs.
	* include/graphs/functions_fsgraph.php: Added unit to flash chart
	of type 2D column.
	* include/graphs/fgraph.php: Added unit to static version.
	* include/functions_forecast.php: Fixed division by zero in 
	projection graphs when all data is zero.
	* operation/agentes/stat_win.php: Added avg_only option for boolean
	graph. 
	
	Bugfix merged from trunk.

2012-02-27  Miguel de Dios  <miguel.dedios@artica.es>

	* include/graphs/functions_pchart.php: fixed when the var for $colors is a
	other thing distint to array (for example a empty string).

	Merged from trunk.

2012-02-24  Miguel de Dios  <miguel.dedios@artica.es>
	* pandora_console/include/functions_ui.php: changed the source code into the
	function "ui_get_full_url" for accept false for to return url with the home
	url or with any string (as query) return url with the php file.

	* pandora_console/include/functions_graph.php,
	pandora_console/include/functions_html.php,